--- a/Example/BancardVposConnector/Base.lproj/Main.storyboard
+++ b/Example/BancardVposConnector/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +20,74 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4yA-I2-XJO">
+                                <rect key="frame" x="-4" y="114" width="383" height="439.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VPOS 2.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jC3-Sn-pZa">
+                                        <rect key="frame" x="20" y="0.0" width="343" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your process_id here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WrY-NY-CQP">
+                                        <rect key="frame" x="20" y="371.5" width="343" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lpy-VI-n1N">
+                                        <rect key="frame" x="20" y="409.5" width="343" height="30"/>
+                                        <state key="normal" title="Load Form">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="loadFormTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="s6l-Pt-c6Q"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OAq-6P-wWl">
+                                        <rect key="frame" x="20" y="30" width="343" height="324"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="343" id="Bkf-zJ-U6P"/>
+                                            <constraint firstAttribute="height" constant="324" id="peW-hR-gAq"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Lpy-VI-n1N" firstAttribute="trailing" secondItem="WrY-NY-CQP" secondAttribute="trailing" id="0t2-mh-Aeg"/>
+                                    <constraint firstItem="OAq-6P-wWl" firstAttribute="leading" secondItem="4yA-I2-XJO" secondAttribute="leading" constant="20" id="Gnm-kN-BtZ"/>
+                                    <constraint firstItem="Lpy-VI-n1N" firstAttribute="top" secondItem="WrY-NY-CQP" secondAttribute="bottom" constant="8" id="KKQ-Kl-d4f"/>
+                                    <constraint firstAttribute="bottom" secondItem="Lpy-VI-n1N" secondAttribute="bottom" id="KeH-VP-dE1"/>
+                                    <constraint firstItem="WrY-NY-CQP" firstAttribute="leading" secondItem="OAq-6P-wWl" secondAttribute="leading" id="MaK-Zu-YvD"/>
+                                    <constraint firstItem="OAq-6P-wWl" firstAttribute="top" secondItem="jC3-Sn-pZa" secondAttribute="bottom" constant="9" id="Osv-Sg-MFo"/>
+                                    <constraint firstItem="jC3-Sn-pZa" firstAttribute="trailing" secondItem="OAq-6P-wWl" secondAttribute="trailing" id="TaH-hv-ivc"/>
+                                    <constraint firstItem="jC3-Sn-pZa" firstAttribute="leading" secondItem="OAq-6P-wWl" secondAttribute="leading" id="X5i-zd-GhA"/>
+                                    <constraint firstAttribute="trailing" secondItem="OAq-6P-wWl" secondAttribute="trailing" constant="20" id="YkH-0c-meT"/>
+                                    <constraint firstItem="WrY-NY-CQP" firstAttribute="trailing" secondItem="OAq-6P-wWl" secondAttribute="trailing" id="grI-5z-V1z"/>
+                                    <constraint firstItem="Lpy-VI-n1N" firstAttribute="leading" secondItem="WrY-NY-CQP" secondAttribute="leading" id="j6i-Er-Sgt"/>
+                                    <constraint firstItem="jC3-Sn-pZa" firstAttribute="top" secondItem="4yA-I2-XJO" secondAttribute="top" id="jzp-3h-n3a"/>
+                                    <constraint firstItem="WrY-NY-CQP" firstAttribute="top" secondItem="OAq-6P-wWl" secondAttribute="bottom" constant="17.5" id="sj1-QN-Vka"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.52549022440000004" blue="0.80392158030000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="4yA-I2-XJO" secondAttribute="trailing" constant="-4" id="Uva-R7-igC"/>
+                            <constraint firstItem="4yA-I2-XJO" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="Xnn-gV-tZf"/>
+                            <constraint firstItem="4yA-I2-XJO" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="dFA-t2-9qF"/>
+                            <constraint firstItem="4yA-I2-XJO" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="-4" id="ecj-7T-A4V"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="processIdField" destination="WrY-NY-CQP" id="2Yj-sk-nwM"/>
+                        <outlet property="vPOSContainer" destination="OAq-6P-wWl" id="NAu-3A-eYy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116" y="117.39130434782609"/>
         </scene>
     </scenes>
 </document>
